--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+app.welcome=Welcome to Spring Boot - Logging Demo
+
+##LOGGING PROPERTIES
+#Color-coded Output
+spring.output.ansi.enabled=ALWAYS
+
 #Log Levels
 #logging.level.root=TRACE
-logging.level.com.demo=TRACE	
+#logging.level.com.demo=TRACE	
