Using springProfile in logback

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 app.welcome=Welcome to Spring Boot - Logging Demo
 
+#ACTIVE PROFILES
+#spring.profiles.active=production
+
 ##LOGGING PROPERTIES
 #Color-coded Output
 spring.output.ansi.enabled=ALWAYS
