Logging to a file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,19 @@
 app.welcome=Welcome to Spring Boot - Logging Demo
 
+#File Output
+#logging.file.name	logging.file.path		Description
+#none				none					Console only logging
+#file-name			none					Writes to the specified log file. Names can be an exact location or relative to the current directory.
+#none				directory-name			Writes spring.log to the specified directory. Names can be an exact location or relative to the current directory.
+logging.file.name=test-app.log
+#logging.file.path=logs
+
+#Spring Boot is using Logback's SizeAndTimeBasedRollingPolicy, which means log files are rotated when the time limit has been reached 
+#Also, the log files are split to make sure that files don't exceed the maximum size
+logging.file.max-history=7
+logging.file.max-size=30MB
+
+
 #ACTIVE PROFILES
 #spring.profiles.active=production
 
