profile specific properties or yaml take precedence over default profile

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -1,3 +1,5 @@
+#PROFILES take precedence over DEFAULT
+spring.profiles.active=dev
 #PROPERTIES in CONFIG take precedence over ROOT
 app.person.name = Donald Trump
 app.person.job = President
