--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -1,5 +1,5 @@
 #PROFILES take precedence over DEFAULT
-spring.profiles.active=dev
+spring.profiles.active=dev,test
 #PROPERTIES in CONFIG take precedence over ROOT
 app.person.name = Donald Trump
 app.person.job = President
