Scheduled FixedRate and FixedDelay

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.profiles.active=postgres
+
+#ENABLE TO TEST FIXED RATE and FIXED DELAY
+scheduled.fixed.enabled=true
+
+fixedDelay.in.milliseconds=5000
+fixedRate.in.milliseconds=5000
+initialDelay.in.milliseconds=3000
+
+# ACTUATOR ENDPOINTS
+management.endpoints.web.exposure.include=info,health,scheduledtasks
+management.endpoint.health.show-details=always
