--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,12 @@ fixedDelay.in.milliseconds=5000
 fixedRate.in.milliseconds=5000
 initialDelay.in.milliseconds=3000
 
+#ENABLE TO TEST CRON
+scheduled.cron.enabled=true
+
+#CRON for every 30 seconds
+cron.expression=*/30 * * * * ?
+
 # ACTUATOR ENDPOINTS
 management.endpoints.web.exposure.include=info,health,scheduledtasks
 management.endpoint.health.show-details=always
